<resources>
    <string name="app_name">Energy</string>
    <string name="content_description_logo">Logo of the energy application</string>
    <string name="content_description_arrow_back">Back icon</string>
    <string name="content_description_menu_button">Menu icon</string>
    <string name="content_description_exercises_image">Exercises image</string>
    <string name="content_description_plus">Plus icon</string>
    <string name="content_description_minus">Minus icon</string>
    <string name="content_description_not_found">Not found icon</string>
    <string name="content_description_action_image">Action Image</string>
    <string name="navigation_item_settings">تنظیمات</string>
    <string name="navigation_item_about">درباره ما</string>
    <string name="edit_text_hint_search">جستجو...</string>
    <string name="banner_word_ene">ene</string>
    <string name="banner_word_rgy">rgy</string>
    <string name="exercise_name_chest">سینه</string>
    <string name="exercise_name_arms">بازو</string>
    <string name="exercise_name_legs">پا</string>
    <string name="action_title_barbell_chest_press">پرس سینه هالتر</string>
    <string name="action_title_barbell_up_chest_press">پرس بالا سینه هالتر</string>
    <string name="action_title_dumbbell_chest_press">پرس سینه دمبل</string>
    <string name="action_title_fly_device">فلای دستگاه</string>
    <string name="action_title_triceps_cable_pushdown">پشت بازو سیم کش ایستاده</string>
    <string name="action_title_triceps_bar_press">پشت بازو هالتر پرسی</string>
    <string name="action_title_biceps_preacher_curl">جلو بازو لاری هالتر</string>
    <string name="action_title_biceps_cable_curl">جلو بازو سیم کش ایستاده</string>
    <string name="action_title_leg_extension">جلو ران</string>
    <string name="action_title_leg_curl">پشت پا</string>
    <string name="action_title_smith_squat">اسکوات اسمیت</string>
    <string name="action_title_calf_raise_machine">ساق پا دستگاه ایستاده</string>
    <string name="action_content_barbell_chest_press">تمرین پرس سینه هالتر یکی از مؤثرترین تمرینات برای تقویت عضلات سینه است. در این تمرین، شما از یک هالتر استفاده می‌کنید و آن را از وضعیت درازکشیده بر روی نیمکت، به بالا فشار می‌دهید. این حرکت کمک می‌کند تا عضلات سینه شما قوی‌تر و حجیم‌تر شوند. برای انجام صحیح این تمرین، باید پاهایتان را محکم روی زمین بگذارید، هالتر را با دست‌هایی به عرض شانه بگیرید و به آرامی به سمت پایین بیاورید تا زمانی که به سینه شما برسد، سپس با تمام قدرت به بالا فشار دهید. این تمرین نه تنها برای عضلات سینه، بلکه برای تقویت عضلات شانه و پشت بازو نیز بسیار مفید است. مهم است که در این تمرین از وزنه‌های مناسب استفاده کنید و در طول حرکت، کمر خود را ثابت و پایدار نگه دارید تا از آسیب‌های احتمالی جلوگیری کنید. همچنین می‌توانید برای افزایش تنوع در تمرینات خود، از تغییرات مختلفی مانند تغییر زاویه نیمکت استفاده کنید.</string>
    <string name="action_content_triceps_cable_pushdown">تمرین پشت بازو سیم کش ایستاده یک تمرین عالی برای تقویت عضلات پشت بازو است. در این تمرین، شما از یک دستگاه سیم کش با یک میله استفاده می‌کنید و آن را از بالای سر خود به سمت پایین می‌کشید. این حرکت کمک می‌کند تا عضلات پشت بازوی شما قوی‌تر و تعریف‌شده‌تر شوند. برای انجام صحیح این تمرین، باید پاهایتان را به اندازه عرض شانه باز کنید، میله را با دو دست بگیرید و به آرامی به سمت پایین بکشید تا دست‌هایتان کاملاً صاف شوند. سپس به آرامی میله را به موقعیت شروع بازگردانید. این تمرین به ویژه برای تقویت عضلات سه سر بازو مفید است. مهم است که در طول تمرین کمر خود را ثابت نگه دارید و از حرکات غیرضروری بدن جلوگیری کنید. همچنین باید از وزنه‌های مناسب استفاده کنید تا از آسیب‌های احتمالی جلوگیری کنید. این تمرین می‌تواند با تغییر نوع میله یا استفاده از دسته‌های مختلف برای تنوع بیشتر انجام شود.</string>
    <string name="action_content_triceps_bar_press">تمرین پشت بازو هالتر پرسی یک تمرین عالی برای تقویت عضلات پشت بازو و افزایش حجم عضلات سه سر بازو است. در این تمرین، شما از یک هالتر استفاده می‌کنید و آن را از بالای سر خود به سمت پایین فشار می‌دهید. این حرکت کمک می‌کند تا عضلات پشت بازوی شما قوی‌تر و حجیم‌تر شوند. برای انجام صحیح این تمرین، باید پاهایتان را به اندازه عرض شانه باز کنید، هالتر را با دو دست بگیرید و به آرامی به سمت پایین فشار دهید تا زمانی که بازوهایتان کاملاً صاف شوند. سپس به آرامی هالتر را به موقعیت شروع بازگردانید. این تمرین به ویژه برای تقویت عضلات سه سر بازو مفید است. مهم است که در طول تمرین کمر خود را ثابت نگه دارید و از حرکات غیرضروری بدن جلوگیری کنید. همچنین باید از وزنه‌های مناسب استفاده کنید تا از آسیب‌های احتمالی جلوگیری کنید. این تمرین می‌تواند با تغییر زاویه نیمکت یا استفاده از هالترهای مختلف برای تنوع بیشتر انجام شود.</string>
    <string name="action_content_biceps_preacher_curl">تمرین جلو بازو لاری هالتر یکی از بهترین تمرینات برای تقویت عضلات جلو بازو است. در این تمرین، شما از یک نیمکت لاری و یک هالتر استفاده می‌کنید و هالتر را از وضعیت پایین به سمت بالا می‌کشید. این حرکت کمک می‌کند تا عضلات جلو بازوی شما قوی‌تر و حجیم‌تر شوند. برای انجام صحیح این تمرین، باید دست‌هایتان را به عرض شانه باز کنید، هالتر را با دو دست بگیرید و به آرامی به سمت بالا بکشید تا زمانی که بازوهایتان کاملاً خم شوند. سپس به آرامی هالتر را به موقعیت شروع بازگردانید. این تمرین به ویژه برای تقویت عضلات دو سر بازو مفید است. مهم است که در طول تمرین کمر خود را ثابت نگه دارید و از حرکات غیرضروری بدن جلوگیری کنید. همچنین باید از وزنه‌های مناسب استفاده کنید تا از آسیب‌های احتمالی جلوگیری کنید. این تمرین می‌تواند با تغییر نوع هالتر یا استفاده از دمبل‌ها برای تنوع بیشتر انجام شود.</string>
    <string name="action_content_biceps_cable_curl">تمرین جلو بازو سیم کش ایستاده یک تمرین بسیار مؤثر برای تقویت عضلات جلو بازو است. در این تمرین، شما از یک دستگاه سیم کش استفاده می‌کنید و میله را از پایین به سمت بالا می‌کشید. این حرکت کمک می‌کند تا عضلات جلو بازوی شما قوی‌تر و حجیم‌تر شوند. برای انجام صحیح این تمرین، باید پاهایتان را به اندازه عرض شانه باز کنید، میله را با دو دست بگیرید و به آرامی به سمت بالا بکشید تا زمانی که بازوهایتان کاملاً خم شوند. سپس به آرامی میله را به موقعیت شروع بازگردانید. این تمرین به ویژه برای تقویت عضلات دو سر بازو مفید است. مهم است که در طول تمرین کمر خود را ثابت نگه دارید و از حرکات غیرضروری بدن جلوگیری کنید. همچنین باید از وزنه‌های مناسب استفاده کنید تا از آسیب‌های احتمالی جلوگیری کنید. این تمرین می‌تواند با تغییر نوع میله یا استفاده از دسته‌های مختلف برای تنوع بیشتر انجام شود.</string>
    <string name="action_content_leg_extension">تمرین جلو ران یکی از بهترین تمرینات برای تقویت عضلات چهار سر ران است. در این تمرین، شما از دستگاه جلو ران استفاده می‌کنید و با فشار دادن پد دستگاه به سمت بالا، عضلات چهار سر ران خود را تقویت می‌کنید. این حرکت کمک می‌کند تا عضلات جلو ران شما قوی‌تر و حجیم‌تر شوند. برای انجام صحیح این تمرین، باید پاهایتان را زیر پد دستگاه قرار دهید، دسته‌ها را بگیرید و به آرامی پد را به سمت بالا فشار دهید تا زمانی که پاهایتان کاملاً صاف شوند. سپس به آرامی پد را به موقعیت شروع بازگردانید. این تمرین به ویژه برای تقویت عضلات چهار سر ران مفید است. مهم است که در طول تمرین کمر خود را ثابت نگه دارید و از حرکات غیرضروری بدن جلوگیری کنید. همچنین باید از وزنه‌های مناسب استفاده کنید تا از آسیب‌های احتمالی جلوگیری کنید. این تمرین می‌تواند با تغییر زاویه دستگاه یا استفاده از وزنه‌های مختلف برای تنوع بیشتر انجام شود.</string>
    <string name="action_content_leg_curl">تمرین پشت پا یکی از مؤثرترین تمرینات برای تقویت عضلات همسترینگ است. در این تمرین، شما از دستگاه پشت پا استفاده می‌کنید و با خم کردن پاها به سمت خود، عضلات همسترینگ خود را تقویت می‌کنید. این حرکت کمک می‌کند تا عضلات پشت پا شما قوی‌تر و حجیم‌تر شوند. برای انجام صحیح این تمرین، باید پاهایتان را زیر پد دستگاه قرار دهید، دسته‌ها را بگیرید و به آرامی پد را به سمت خود خم کنید تا زمانی که پاهایتان کاملاً خم شوند. سپس به آرامی پد را به موقعیت شروع بازگردانید. این تمرین به ویژه برای تقویت عضلات همسترینگ مفید است. مهم است که در طول تمرین کمر خود را ثابت نگه دارید و از حرکات غیرضروری بدن جلوگیری کنید. همچنین باید از وزنه‌های مناسب استفاده کنید تا از آسیب‌های احتمالی جلوگیری کنید. این تمرین می‌تواند با تغییر زاویه دستگاه یا استفاده از وزنه‌های مختلف برای تنوع بیشتر انجام شود.</string>
    <string name="action_content_smith_squat">تمرین اسکوات اسمیت یکی از بهترین تمرینات برای تقویت عضلات پا و افزایش قدرت عمومی بدن است. در این تمرین، شما از دستگاه اسمیت استفاده می‌کنید و با پایین بردن بدن به حالت اسکوات، عضلات پا و همچنین عضلات پایین تنه خود را تقویت می‌کنید. این حرکت کمک می‌کند تا عضلات پا شما قوی‌تر و حجیم‌تر شوند و همچنین تعادل و استقامت بدنی شما افزایش یابد. برای انجام صحیح این تمرین، باید پاهایتان را به اندازه عرض شانه باز کنید، میله دستگاه اسمیت را با دو دست بگیرید و به آرامی بدن خود را به سمت پایین ببرید تا زمانی که ران‌هایتان موازی با زمین شوند. سپس با قدرت به موقعیت شروع بازگردید. این تمرین به ویژه برای تقویت عضلات چهار سر ران، همسترینگ، و عضلات سرینی مفید است. مهم است که در طول تمرین کمر خود را صاف و پایدار نگه دارید تا از آسیب‌های احتمالی جلوگیری کنید. همچنین باید از وزنه‌های مناسب استفاده کنید و تمرین را با تکنیک صحیح انجام دهید تا از فواید حداکثری آن بهره‌مند شوید. این تمرین می‌تواند با تغییر فاصله پاها یا اضافه کردن وزنه‌های مختلف برای تنوع بیشتر انجام شود.</string>
    <string name="action_content_calf_raise_machine">تمرین ساق پا دستگاه ایستاده یکی از مؤثرترین تمرینات برای تقویت عضلات ساق پا است. در این تمرین، شما از دستگاه ساق پا ایستاده استفاده می‌کنید و با بالا بردن پاشنه‌های پا، عضلات ساق پا خود را تقویت می‌کنید. این حرکت کمک می‌کند تا عضلات ساق پا شما قوی‌تر و حجیم‌تر شوند و همچنین استقامت و تعادل پای شما افزایش یابد. برای انجام صحیح این تمرین، باید پاهایتان را به اندازه عرض شانه باز کنید، شانه‌های خود را زیر پدهای دستگاه قرار دهید و به آرامی پاشنه‌های خود را به سمت بالا ببرید تا زمانی که روی انگشتان پای خود ایستاده باشید. سپس به آرامی پاشنه‌ها را به موقعیت شروع بازگردانید. این تمرین به ویژه برای تقویت عضلات گاستروکنمیوس و سولئوس مفید است. مهم است که در طول تمرین کمر خود را صاف و پایدار نگه دارید تا از آسیب‌های احتمالی جلوگیری کنید. همچنین باید از وزنه‌های مناسب استفاده کنید و تمرین را با تکنیک صحیح انجام دهید تا از فواید حداکثری آن بهره‌مند شوید. این تمرین می‌تواند با تغییر فاصله پاها یا استفاده از وزنه‌های مختلف برای تنوع بیشتر انجام شود.</string>
    <string name="action_content_barbell_up_chest_press">تمرین پرس بالا سینه هالتر یکی از بهترین تمرینات برای تقویت عضلات بالایی سینه است. در این تمرین، شما از یک نیمکت شیب‌دار استفاده می‌کنید تا زاویه تمرین به سمت بالا باشد و هالتر را از وضعیت درازکشیده به بالا فشار می‌دهید. این حرکت باعث می‌شود تا عضلات بالایی سینه بیشتر درگیر شوند و تقویت شوند. برای انجام این تمرین، پاهایتان را محکم روی زمین بگذارید، هالتر را با دست‌هایی به عرض شانه بگیرید و به آرامی به سمت پایین بیاورید تا زمانی که به سینه بالایی شما برسد، سپس با تمام قدرت به بالا فشار دهید. این تمرین علاوه بر تقویت عضلات سینه، برای تقویت عضلات شانه و پشت بازو نیز بسیار مفید است. حتماً از وزنه‌های مناسب استفاده کنید و در طول حرکت، کمر خود را ثابت و پایدار نگه دارید تا از آسیب‌های احتمالی جلوگیری کنید. همچنین، می‌توانید برای افزایش شدت تمرین، تعداد تکرارها و ست‌ها را افزایش دهید.</string>
    <string name="title_activity_settings">تنظیمات</string>
    <string name="label_seek_bar_font_size">اندازه متن</string>
    <string name="about_text">لورم ایپسوم یا طرح‌نما (به انگلیسی: Lorem ipsum) به متنی آزمایشی و بی‌معنی در صنعت چاپ، صفحه‌آرایی و طراحی گرافیک گفته می‌شود. طراح گرافیک از این متن به عنوان عنصری از ترکیب بندی برای پر کردن صفحه و ارایه اولیه شکل ظاهری و کلی طرح سفارش گرفته شده استفاده می نماید، تا از نظر گرافیکی نشانگر چگونگی نوع و اندازه فونت و ظاهر متن باشد. معمولا طراحان گرافیک برای صفحه‌آرایی، نخست از متن‌های آزمایشی و بی‌معنی استفاده می‌کنند تا صرفا به مشتری یا صاحب کار خود نشان دهند که صفحه طراحی یا صفحه بندی شده بعد از اینکه متن در آن قرار گیرد چگونه به نظر می‌رسد و قلم‌ها و اندازه‌بندی‌ها چگونه در نظر گرفته شده‌است. از آنجایی که طراحان عموما نویسنده متن نیستند و وظیفه رعایت حق تکثیر متون را ندارند و در همان حال کار آنها به نوعی وابسته به متن می‌باشد آنها با استفاده از محتویات ساختگی، صفحه گرافیکی خود را صفحه‌آرایی می‌کنند تا مرحله طراحی و صفحه‌بندی را به پایان برند.</string>
    <string name="hello_world">Hello World</string>
    <string name="no_result">چیزی یافت نشد</string>
</resources>