<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/banner_container"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/dark_blue">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/yekan_bakh_bold"
            android:text="@string/banner_word_ene"
            android:textAllCaps="true"
            android:textColor="@color/red"
            android:textSize="55sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-35dp"
            android:fontFamily="@font/yekan_bakh_bold"
            android:text="@string/banner_word_rgy"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="50sp" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_weight="0.5"
        android:contentDescription="@string/content_description_logo"
        android:src="@drawable/ic_launcher_foreground" />
</LinearLayout>