<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/banner_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:background="@color/dark_blue"
    android:paddingHorizontal="40dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/yekan_bakh_bold"
            android:text="@string/banner_word_ene"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/red"
            android:textSize="85sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-40dp"
            android:fontFamily="@font/yekan_bakh_bold"
            android:text="@string/banner_word_rgy"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="80sp" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:contentDescription="@string/content_description_logo"
        android:src="@drawable/ic_launcher_foreground" />
</LinearLayout>