<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <!-- Main Content -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dark_blue"
        android:orientation="vertical"
        android:paddingTop="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layoutDirection="rtl">

            <ImageButton
                android:id="@+id/button_menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/content_description_menu_button"
                android:src="@drawable/ic_menu" />

            <EditText
                android:id="@+id/edit_text_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="160dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/shape_search_edit_text"
                android:drawableStart="@drawable/ic_magnifier"
                android:drawablePadding="4dp"
                android:drawableTint="@color/blue_low_alpha"
                android:hint="@string/edit_text_hint_search"
                android:importantForAutofill="no"
                android:inputType="text"
                android:paddingHorizontal="10dp"
                android:paddingVertical="2dp"
                android:textColor="@color/blue"
                android:textColorHint="@color/blue_low_alpha" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <include layout="@layout/component_banner" />

            <include layout="@layout/component_separator" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_exercises"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:overScrollMode="never"
                android:paddingHorizontal="40dp" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_search"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/no_result"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:contentDescription="@string/content_description_not_found"
                android:src="@drawable/ic_magnifier_not"
                app:tint="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/yekan_bakh_regular"
                android:text="@string/no_result"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>

    <!-- Navigation Drawer -->
    <RelativeLayout
        android:id="@+id/navigation_drawer"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:background="@android:color/holo_blue_light">

        <include layout="@layout/drawer_navigation" />
    </RelativeLayout>

</androidx.drawerlayout.widget.DrawerLayout>
