<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue"
    android:orientation="vertical"
    tools:context=".activities.ContentActivity">

    <include layout="@layout/component_appbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="20dp">

        <View
            android:layout_width="wrap_content"
            android:layout_height="8dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:background="@drawable/shape_image_content"
            android:padding="20dp">

            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/content_description_action_image"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_no_image" />

        </RelativeLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="8dp" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/shape_title_content"
            android:gravity="center"
            android:paddingHorizontal="16dp">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/yekan_bakh_bold"
                android:text="@string/hello_world"
                android:textColor="@color/white"
                android:textSize="25sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ScrollView
                android:id="@+id/scroll_view_about"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fadeScrollbars="true"
                android:paddingHorizontal="8dp"
                android:scrollbarAlwaysDrawHorizontalTrack="true"
                android:scrollbarAlwaysDrawVerticalTrack="true"
                android:scrollbarStyle="insideInset"
                android:scrollbarThumbVertical="@color/blue"
                android:scrollbarTrackVertical="@color/blue_low_alpha"
                tools:ignore="UselessParent">

                <TextView
                    android:id="@+id/content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:fontFamily="@font/yekan_bakh_regular"
                    android:text="@string/about_text"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

            </ScrollView>

        </RelativeLayout>


    </LinearLayout>


</LinearLayout>